crates/flight-hid/tests/snapshots/snapshots__quirks_t16000m.snap
---
source: crates/flight-hid/tests/snapshots.rs
expression: quirks
---
[
    NoisyAxis {
        axis_name: "X",
        noise_floor: 0.02,
    },
    NoisyAxis {
        axis_name: "Y",
        noise_floor: 0.02,
    },
    NoisyAxis {
        axis_name: "Rz",
        noise_floor: 0.03,
    },
]
