crates/flight-hid/tests/snapshots/snapshots__quirks_twcs_throttle.snap
---
source: crates/flight-hid/tests/snapshots.rs
expression: quirks
---
[
    NoisyAxis {
        axis_name: "Slider",
        noise_floor: 0.015,
    },
    SlowInit {
        delay_ms: 500,
    },
]
